<resources>
    <string name="app_name">TestShoppingMarket</string>
    <string name="login_title">ECOshop</string>
    <string name="content_login_activity">A Lorem Ipsum text generator is specifically designed to generate a dummy text or placeholder text.</string>
    <string name="txt_welcome_login_activity">Welcome back</string>
    <string name="txt_user_name_login_activity">Username</string>
    <string name="txt_pass_login_activity">password</string>
    <string name="txt_btn_login_activity">Login</string>
    <string name="txt_btn_product_category">clothes</string>
    <string name="txt_btn_add_product">Add Product</string>
    <string name="txt_sorting_home_fragment">sorting:</string>
    <string name="txt_sorting_desending">descending</string>
    <string name="txt_sorting_asending">Ascending</string>
    <string name="title_detail_product">product details</string>
    <string name="txt_title_add_profile">A Lorem Ipsum text generator is specifically designed to generate a dummy text or placeholder text.</string>
    <string name="title_add_profile">Title</string>
    <string name="description_add_profile">Description</string>
    <string name="category_add_profile">category</string>
    <string name="image_add_profile">image URL</string>
    <string name="price_add_profile">price</string>
    <string name="txt_cancel">Cancle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dialog_add_product">Your product has been successfully registered</string>
    <string name="txt_category">category:</string>
    <string name="txt_price">price:</string>
    <string name="txt_add_to_buy">Add to cart</string>
    <string name="txt_title_shoppin_cart">Shopping Cart</string>
    <string name="txt_name_shopping_cart">Name:</string>
    <string name="txt_cash">cash</string>
    <string name="txt_loan_in_shopping_cart">Loan</string>
    <string name="txt_total_in_shopping_cart">Total:</string>
    <string name="txt_total_amount">Total Amount:</string>
    <string name="btn_txt_check_out_cart">Proceed to Check Out</string>
    <string name="txt_all_total_in_payment">Total Amount: %1$s</string>
    <string name="txt_year_in_payment">Year</string>
    <string name="txt_month_in_payment">Month</string>
    <string name="txt_e_pass_in_payment">E-Pass</string>
    <string name="txt_btn_check_out_in_payment">Check Out</string>
    <string name="txt_total_amount_result_payment">Total Amount:</string>
    <string name="txt_card_number_result_payment">card number:</string>
    <string name="txt_tracking_code_result_payment">Tracking Code:</string>
    <string name="btn_txt_in_payment_result">Complete  transaction</string>
    <string name="txt_off_three_month_in_shopping_cart">3 months</string>
    <string name="txt_off_six_month_in_shopping_cart">6 months</string>
    <string name="txt_off_tewelev_month_in_shopping_cart">12 months</string>
    <string name="txt_off_percent_20_month_in_shopping_cart">20% intersts</string>
    <string name="txt_off_percent_10_month_in_shopping_cart">10% intersts</string>
    <string name="txt_off_tewelev_05_in_shopping_cart">05% intersts</string>


</resources>