<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_title_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/txt_title_add_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_add_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true"
            android:background="@color/very_lower_white"
            app:layout_constraintBottom_toTopOf="@+id/gl_bottom_in_add_profile"
            app:layout_constraintStart_toEndOf="@+id/gl_start_in_add_profile"
            app:layout_constraintEnd_toStartOf="@+id/gl_end_in_add_profile">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_title_in_add_profile"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/low_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:text="@string/txt_btn_add_product"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.appcompat.widget.Toolbar>


                <EditText
                    android:id="@+id/et_title_in_add_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/title_add_profile"
                    android:padding="8dp"
                    android:background="@drawable/background_et_login_activity"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar_title_in_add_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/et_description_in_add_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/description_add_profile"
                    android:padding="8dp"
                    android:background="@drawable/background_et_login_activity"
                    app:layout_constraintTop_toBottomOf="@+id/et_title_in_add_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/et_category_in_add_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/category_add_profile"
                    android:padding="8dp"
                    android:background="@drawable/background_et_login_activity"
                    app:layout_constraintTop_toBottomOf="@+id/et_description_in_add_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/et_image_in_add_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/image_add_profile"
                    android:padding="8dp"
                    android:background="@drawable/background_et_login_activity"
                    app:layout_constraintTop_toBottomOf="@+id/et_category_in_add_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/et_price_in_add_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="18dp"
                    android:hint="@string/price_add_profile"
                    android:padding="8dp"
                    android:background="@drawable/background_et_login_activity"
                    app:layout_constraintTop_toBottomOf="@+id/et_image_in_add_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/txt_cancel"
                    app:backgroundTint="@color/white"
                    app:strokeColor="@color/color_btn"
                    app:strokeWidth="2dp"
                    android:textColor="@color/color_btn"
                    style="@style/Widget.MaterialComponents.Button"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
                    app:layout_constraintTop_toBottomOf="@+id/et_price_in_add_profile"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_center_btn_in_add_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start_in_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end_in_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom_in_add_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="horizontal"/>


</androidx.constraintlayout.widget.ConstraintLayout>