<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    android:layout_margin="5dp"
    android:background="@color/very_low_green"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/very_low_green"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_confirm_result_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/vector_confirm_add_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_confirm_result_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dialog_add_product"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/iv_confirm_result_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/view_in_result_payment_dialog"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/low_gray2"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_confirm_result_payment"/>


        <TextView
            android:id="@+id/txt_title_total_amount_in_payment_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="22dp"
            android:text="@string/txt_total_amount_result_payment"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/view_in_result_payment_dialog"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_price_amount_in_payment_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/view_in_result_payment_dialog"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_title_card_number_in_payment_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="22dp"
            android:text="@string/txt_card_number_result_payment"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_total_amount_in_payment_dialog"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_content_card_number_in_payment_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txt_price_amount_in_payment_dialog"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_title_tracking_code_in_payment_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="22dp"
            android:text="@string/txt_tracking_code_result_payment"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_card_number_in_payment_dialog"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_content_tracking_code_in_payment_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:textStyle="bold"
            android:text="1233456789"
            app:layout_constraintTop_toBottomOf="@+id/txt_content_card_number_in_payment_dialog"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:textSize="12sp"
            android:backgroundTint="@color/green_low"
            android:text="@string/btn_txt_in_payment_result"
            style="@style/Widget.MaterialComponents.Button"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_tracking_code_in_payment_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>