<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    app:cardElevation="8dp"
    android:layout_margin="5dp"
    app:cardPreventCornerOverlap="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_title_in_detail_product"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/low_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:text="@string/title_detail_product"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:id="@+id/iv_image_detail_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            app:layout_constraintBottom_toTopOf="@+id/gl_under_picture_in_dialog_detail_product"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_title_in_detail_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_under_picture_in_dialog_detail_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/txt_title_dialog_detail_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/content_login_activity"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="12dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/iv_image_detail_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txt_description_in_dialog_detail_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/gray_txt_add_product"
            android:layout_marginLeft="18dp"
            android:text="@string/content_login_activity"
            android:layout_marginRight="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_dialog_detail_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_price_in_detail_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="2323232"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="18dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_description_in_dialog_detail_product"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="22dp"
            android:text="@string/txt_add_to_buy"
            android:textSize="14sp"
            android:drawableLeft="@drawable/baseline_shopping_basket_24"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/purple_txt_login"
            app:layout_constraintTop_toTopOf="@+id/txt_price_in_detail_product"
            app:layout_constraintBottom_toBottomOf="@+id/txt_price_in_detail_product"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ProgressBar
            android:id="@+id/progress_in_detail_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/txt_price_in_detail_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>